# Daily

./: ALL_BUILD.vcxproj  CMakeCache.txt  CMakeLists.txt  Projeto_Diario_Programado.sln  Projeto_Diario_Programado.vcxproj  Projeto_Diario_Programado.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  main.cpp
Projeto_Diario_Programado.dir/Debug/: Projeto_Diario_Programado.exe.recipe  Projeto_Diario_Programado.ilk
Projeto_Diario_Programado.dir/Debug/Projeto_.5AE9BC9F.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
include/: myheader.h
src/: mysource.cpp
x64/Debug/ALL_BUILD/: ALL_BUILD.recipe
x64/Debug/ALL_BUILD/ALL_BUILD.tlog/: ALL_BUILD.lastbuildstate  CustomBuild.command.1.tlog
x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
